--- a/style.css
+++ b/style.css
@@ -21,9 +21,7 @@ body {
 }
 
 #finalText {
-    position: absolute;
-    top: 3rem;
-    left: 0.5rem;
+    text-align: center;
     font-size: 2em;
     color: yellow;
 }
@@ -70,11 +68,14 @@ body {
     background-image: url("imgs/ghost-red.gif");
 }
 
-#pad {
+.col-2 {
     margin-left: 40px;
 }
 
 .table {
+    display: flex;;
+}
+.fields {
     height: 40px;
     text-align: center;
     padding: 0 20px;
