--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
     background-image: url("imgs/cherry.png");
 }
 
-#pacman, #ghost {
+#pacman, .ghost {
     width: 20px;
     height: 20px;
     background-size: contain;
@@ -64,7 +64,15 @@ body {
     background-image: url("imgs/pacman-r.gif");
 }
 
-#ghost {
+#ghost-brown {
+    background-image: url("imgs/ghost-brown.gif");
+}
+
+#ghost-pink {
+    background-image: url("imgs/ghost-pink.gif");
+}
+
+#ghost-red {
     background-image: url("imgs/ghost-red.gif");
 }
 
